test with simple model

--- a/src/models/rbins/dp_model/simple_dp/CMakeLists.txt
+++ b/src/models/rbins/dp_model/simple_dp/CMakeLists.txt
@@ -1,7 +1,6 @@
 add_library(fabm_models_rbins OBJECT
             rbins_model_library.F90
-            base_model.F90
-            dissolution.F90
+            voet.F90
            )
 
 add_dependencies(fabm_models_rbins fabm_base)
