--- a/src/models/rbins/gotm.yaml
+++ b/src/models/rbins/gotm.yaml
@@ -7,13 +7,13 @@ location:
    name: BS station                        # station name used in output [default=GOTM site]
    latitude: 43.177                        # latitude [degrees North; min=-90.0; max=90.0; default=0.0]
    longitude: 32.625                       # longitude [degrees East; min=-360.0; max=360.0; default=0.0]
-   depth: 200.0                            # water depth [m; min=0.0; default=100.0]
+#   depth: 200.0                            # water depth [m; min=0.0; default=100.0]
 time:
    start: 1990-01-01 00:00:00              # start date and time [yyyy-mm-dd HH:MM:SS; default=2017-01-01 00:00:00]
    stop: 1990-02-01 00:00:00               # stop date and time [yyyy-mm-dd HH:MM:SS; default=2018-01-01 00:00:00]
    dt: 3600                              # time step for integration [s; min=0.0; default=3600.0]
 grid:
-   nlev: 10                                 # number of layers [min=1; default=100]
+   nlev: 1                                 # number of layers [min=1; default=100]
    method: analytical                      # layer thickness specification [analytical=equal by default with optional zooming, file_sigma=prescribed relative fractions, file_h=prescribed thicknesses; default=analytical]
    ddu: 1.0                                # surface zooming [dimensionless; min=0.0; default=0.0]
    ddl: 0.0                                # bottom zooming [dimensionless; min=0.0; default=0.0]
