--- a/src/models/rbins/dp_model/simple_dp_modular/gotm.yaml
+++ b/src/models/rbins/dp_model/simple_dp_modular/gotm.yaml
@@ -40,7 +40,7 @@ equation_of_state:                         # equation of state
 restart:
    load: false                             # initialize simulation with state stored in restart.nc [default=false]
 output:
-   output:                                   # path of output file, excluding extension
+   voet:                                   # path of output file, excluding extension
       time_unit: hour                       # time unit [second, hour, day, month, year, dt=model time step; default=day]
       time_step: 1                         # number of time units between output [min=1; default=1]
       time_method: point                   # treatment of time dimension [point=instantaneous, mean, integrated; default=point]
