update dp model based on cofabm_Model

--- a/src/models/rbins/fabm.yaml
+++ b/src/models/rbins/fabm.yaml
@@ -5,9 +5,13 @@ instances:
     initialization:
       p: 200 # concentration (mmolC m-3)
       d: 100 # concentration (mmolC m-3)
+    parameters:
+      w_p: -1.0 # sinking speed (m day-1), should be <0
+      k_p: 0.006 # precipitation rate (h-1)
   dissolution:
     model: rbins/dissolution
     coupling:
       p: base_model/p
       d: base_model/d
-
+    parameters:
+      k_d: 0.0039 # dissolution rate (h-1)
