--- a/src/models/rbins/gotm.yaml
+++ b/src/models/rbins/gotm.yaml
@@ -10,10 +10,10 @@ location:
 #   depth: 200.0                            # water depth [m; min=0.0; default=100.0]
 time:
    start: 1990-01-01 00:00:00              # start date and time [yyyy-mm-dd HH:MM:SS; default=2017-01-01 00:00:00]
-   stop: 1990-02-01 00:00:00               # stop date and time [yyyy-mm-dd HH:MM:SS; default=2018-01-01 00:00:00]
+   stop: 1990-01-15 00:00:00               # stop date and time [yyyy-mm-dd HH:MM:SS; default=2018-01-01 00:00:00]
    dt: 3600                              # time step for integration [s; min=0.0; default=3600.0]
 grid:
-   nlev: 1                                 # number of layers [min=1; default=100]
+   nlev: 5                                # number of layers [min=1; default=100]
    method: analytical                      # layer thickness specification [analytical=equal by default with optional zooming, file_sigma=prescribed relative fractions, file_h=prescribed thicknesses; default=analytical]
    ddu: 1.0                                # surface zooming [dimensionless; min=0.0; default=0.0]
    ddl: 0.0                                # bottom zooming [dimensionless; min=0.0; default=0.0]
@@ -40,7 +40,7 @@ equation_of_state:                         # equation of state
 restart:
    load: false                             # initialize simulation with state stored in restart.nc [default=false]
 output:
-   output:                                   # path of output file, excluding extension
+   voet:                                   # path of output file, excluding extension
       time_unit: hour                       # time unit [second, hour, day, month, year, dt=model time step; default=day]
       time_step: 1                         # number of time units between output [min=1; default=1]
       time_method: point                   # treatment of time dimension [point=instantaneous, mean, integrated; default=point]
