--- a/src/models/rbins/fabm.yaml
+++ b/src/models/rbins/fabm.yaml
@@ -3,14 +3,16 @@ instances:
   base_model:
     model: rbins/base_model
     initialization:
-      p: 200 # concentration (molC m-3)
-      d: 100 # concentration (molC m-3)
-      p_benthos: 10 # concentration (molC m-2)
+      p: 0.1 # concentration (molC m-3)
+      d: 0.1 # concentration (molC m-3)
+      p_benthos: 1 # concentration (molC m-2)
     parameters:
       w_p: -1.0 # sinking speed (m day-1), should be <0
       k_p: 0.006 # precipitation rate (h-1)
       reminpart: 0.1 # remineralization rate for benthic particulate substance (day-1)
       burialpart: 0.1 # burial rate for benthic particulate substance (day-1)
+      airconc: 0.02 # air concentration of dissolved (mol m-3)
+      piston_velocity: 0.1 # piston velocity (m day-1) 
   dissolution:
     model: rbins/dissolution
     coupling:
